Avalara Fullqa/src/B2B Commerce/objects/E_FeaturedProductI18N__c.object
<CustomObject>
    <description>Locale-specific version of featured product, used for localizing featured product description.</description>
    <fields>
        <fullName>DescriptionRT__c</fullName>
        <label>DescriptionRT</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Featured Product Description in the language referenced by the locale.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FeaturedProduct__c</fullName>
        <description>Reference to Featured Product being localized.</description>
        <label>CC Featured Product</label>
        <referenceTo>E_FeaturedProduct__c</referenceTo>
        <relationshipLabel>FeaturedProductI18Ns</relationshipLabel>
        <relationshipName>FeaturedProductI18Ns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <description>Locale that is being defined by this entry.</description>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>CC FeaturedProductI18N</label>
    <nameField>
        <label>FeaturedProductI18N Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC FeaturedProductI18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>